<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="10dp"
    android:padding="10dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/tv_text_user_name"
            android:layout_marginEnd="5dp"
            android:gravity="center_horizontal"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/tv_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="7dp"
            android:layout_gravity="center"
            android:contentDescription="@string/iv_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <RatingBar
            android:id="@+id/tv_user_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:stepSize="0.1"
            android:isIndicator="true"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/userRating"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>>

        <TextView
            android:id="@+id/tv_date_of_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/DateOfReview"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/tv_user_rating"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_reviewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/reviewContent"
            android:autoLink="web"
            android:linksClickable="true"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@id/tv_date_of_review"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>